Prepare Russian language environment

--- a/shabunin.tex
+++ b/shabunin.tex
@@ -1,5 +1,15 @@
 \documentclass{article}
+\usepackage[utf8]{inputenc}
+\usepackage[T2A]{fontenc}
+\usepackage[russian]{babel}
+
+\title{}
+\author{}
 
 \begin{document}
+
+\maketitle
+
+\section{}
 
 \end{document}
